showing help sidebar when screen is extra small size

--- a/avRegistration/register-directive/register-directive.html
+++ b/avRegistration/register-directive/register-directive.html
@@ -41,7 +41,7 @@
           </div>
         </form>
     </div>
-    <div class="col-sm-5 col-sm-offset-1 help-sidebar hidden-xs">
+    <div class="col-sm-5 col-sm-offset-1 help-sidebar">
       <span>
           <h3 class="help-h3" ng-i18next="avRegistration.registerAdminFormHelpTitle"></h3>
           <p ng-i18next>avRegistration.helpAdminRegisterForm</p>
