--- a/avRegistration/login-directive/login-directive.html
+++ b/avRegistration/login-directive/login-directive.html
@@ -29,11 +29,13 @@
                 tabindex="{{login_fields.length+1}}"
                 ng-disabled="!form.$valid || sendingData">
               </button>
+              <br>
+              <br>
           </div>
         </form>
     </div>
     <div
-      class="col-sm-5 col-sm-offset-1 hidden-xs"
+      class="col-sm-5 col-sm-offset-1"
       ng-if="registrationAllowed">
       <h3 class="help-h3" ng-i18next="avRegistration.notRegisteredYet"></h3>
       <p>
