--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <!-- IE8 bind workaround (needed for less) -->
   <script src="/ie8-bind-workaround.js"></script>
-  
+
   <!-- JS from Bower Components -->
   <script src="bower_components/less.js/dist/less-1.6.2.js"></script>
   <script src="bower_components/jquery/jquery.js" class="libnocompat"></script>
@@ -42,6 +42,9 @@
   <script src="bower_components/ng-autofocus/dist/ng-autofocus.js" class="lib"></script>
   <script src="bower_components/css-element-queries/src/ResizeSensor.js" class="lib"></script>
   <script src="bower_components/rng-js/rng.js" class="lib"></script>
+  <script src="bower_components/d3/d3.min.js" class="lib"></script>
+  <script src="bower_components/nvd3/nv.d3.min.js" class="lib"></script>
+  <script src="bower_components/angular-nvd3/dist/angular-nvd3.min.js" class="lib"></script>
   <!-- Add New Bower Component JS Above -->
 
   <!-- JS from Vendor Components -->
@@ -110,7 +113,7 @@
   <script src="avUi/learn-more-directive.js" class="app"></script>
   <script src="avUi/documentation-directive/documentation-directive.js" class="app"></script>
   <script src="avUi/foot-directive/foot-directive.js" class="app"></script>
-  
+
   <script src="app.js" class="app"></script>
 
   <script src="test/test.js" class="app"></script>
@@ -122,7 +125,7 @@
 
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
   <script src="/ie10-viewport-bug-workaround.js"></script>
-  
+
   <!-- IE9 console workaround -->
   <script src="/ie9-console-workaround.js"></script>
   <!-- Add New Component JS Above -->
