chore: include nvd3 css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <base href="/">
     <meta charset="utf-8" />
     <link href="/themes/default/app.less" type="text/css" rel="stylesheet/less" id="themes" />
+    <link rel="stylesheet" href="bower_components/nvd3/nv.d3.min.css">
   </head>
 <body>
   <!-- Livereload script for development only (stripped during dist build) -->
